# GameLibrary

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: utilities.cmake
include/GameLibrary/Console/: Command.h  Console.h  Cvar.h  Events.h  Types.h
include/GameLibrary/ECS/: Component.h  Entity.h  EntityManager.h
include/GameLibrary/Event/: AnyCallback.h  BaseEvent.h  Callback.h  Dispatcher.h  Traits.h
include/GameLibrary/Exceptions/: Conversions.h  Standard.h  StandardExceptions.h
include/GameLibrary/Utilities/: Functions.h  IdManager.h  Limits.h  String.h  Traits.h
include/GameLibrary/Utilities/Conversions/: Arithmetic.h  ArithmeticString.h  String.h  StringToSstream.h
src/GameLibrary/Console/: Command.cpp  Console.cpp  Cvar.cpp
src/GameLibrary/Event/: Dispatcher.cpp
src/GameLibrary/Utilities/: String.cpp
test/: CMakeLists.txt
test/Console/: Command.cpp  Console.cpp  Cvar.cpp
test/ECS/: EntityManager.cpp
test/Event/: AnyCallback.cpp  Callback.cpp  Dispatcher.cpp  Traits.cpp
test/Utilities/: Functions.cpp  IdManager.cpp  Limits.cpp  String.cpp  Traits.cpp
test/Utilities/Conversions/: Arithmetic.cpp  ArithmeticString.cpp  String.cpp
